Fix overflow issue.

--- a/demo.css
+++ b/demo.css
@@ -82,3 +82,7 @@ footer {
 a {
     @apply font-semibold;
 }
+
+[data-code-block] {
+  overflow: auto;
+}
