--- a/demo.dist.css
+++ b/demo.dist.css
@@ -754,6 +754,10 @@ a {
 	font-weight: 600;
 }
 
+[data-code-block] {
+  overflow: auto;
+}
+
 @media (min-width: 768px) {
 
 	.md\:mt-0 {
